--- a/index.html
+++ b/index.html
@@ -43,23 +43,10 @@
             text-align: center;
         }
 
-        /* Header & Logo */
         header {
             padding: 60px 0;
         }
 
-        .logo {
-            width: 220px;
-            height: auto;
-            filter: drop-shadow(0 0 15px rgba(255,255,255,0.1));
-            transition: transform 0.4s ease;
-        }
-
-        .logo:hover {
-            transform: scale(1.05);
-        }
-
-        /* Hero Section */
         h1 {
             font-size: clamp(2rem, 5vw, 3.5rem);
             font-weight: 700;
@@ -75,7 +62,6 @@
             opacity: 0.85;
         }
 
-        /* Call to Action */
         .cta-main {
             display: inline-block;
             padding: 18px 40px;
@@ -97,7 +83,6 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
         }
 
-        /* Services Section */
         .services-container {
             margin-bottom: 120px;
         }
@@ -124,7 +109,6 @@
             color: rgba(255,255,255,0.3);
         }
 
-        /* Contact Form (Glassmorphism) */
         .form-card {
             background: var(--glass-bg);
             backdrop-filter: blur(12px);
@@ -134,56 +118,29 @@
             border-radius: 24px;
             max-width: 800px;
             margin: 0 auto;
-            text-align: left;
         }
 
         .form-card h2 {
-            text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             font-size: 2rem;
+            text-align: center;
         }
 
-        .form-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
+        .contact-info {
+            font-size: 1.1rem;
+            text-align: center;
+            line-height: 2;
+            color: rgba(255,255,255,0.85);
         }
 
-        .full-width {
-            grid-column: span 2;
+        .contact-info a {
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: 600;
         }
 
-        input, textarea {
-            width: 100%;
-            padding: 16px;
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid var(--glass-border);
-            border-radius: 12px;
-            color: #fff;
-            font-family: inherit;
-            font-size: 1rem;
-            transition: border 0.3s ease;
-        }
-
-        input:focus, textarea:focus {
-            outline: none;
-            border-color: rgba(255, 255, 255, 0.6);
-        }
-
-        button.submit-btn {
-            grid-column: span 2;
-            padding: 18px;
-            background: #fff;
-            border: none;
-            border-radius: 12px;
-            font-weight: 700;
-            cursor: pointer;
-            transition: transform 0.2s ease, opacity 0.3s ease;
-        }
-
-        button.submit-btn:hover {
-            opacity: 0.9;
-            transform: scale(0.99);
+        .contact-info a:hover {
+            text-decoration: underline;
         }
 
         footer {
@@ -191,27 +148,18 @@
             font-size: 0.9rem;
             opacity: 0.5;
         }
-
-        /* Mobile Adjustments */
-        @media (max-width: 768px) {
-            .form-grid { grid-template-columns: 1fr; }
-            .full-width { grid-column: span 1; }
-            button.submit-btn { grid-column: span 1; }
-            h1 { font-size: 2.5rem; }
-        }
     </style>
 </head>
 <body>
 
     <div class="wrapper">
-     
 
         <section class="hero">
             <h1>Clear. Reliable. Professional Audio Visual.</h1>
             <p class="intro-text">
                 Visual Services provides full-service audio visual solutions for events, screenings, and live productions. We focus on technical precision and seamless execution.
             </p>
-            <a href="#contact" class="cta-main">Upcoming Project? Let's Connect!</a>
+            <a href="#contact" class="cta-main">Let’s Connect</a>
         </section>
 
         <section class="services-container">
@@ -234,24 +182,17 @@
         </section>
 
         <section id="contact" class="form-card">
-            <h2>Let's Talk Production</h2>
-            <form action="#">
-                <div class="form-grid">
-                    <input type="text" placeholder="First Name" required>
-                    <input type="text" placeholder="Last Name" required>
-                    <input type="text" placeholder="Company" class="full-width">
-                    <input type="email" placeholder="Email Address" required>
-                    <input type="tel" placeholder="Phone Number">
-                    <input type="text" placeholder="Subject" class="full-width">
-                    <textarea placeholder="Tell us about your project..." class="full-width" rows="5"></textarea>
-                    <button type="submit" class="submit-btn">Send Inquiry</button>
-                </div>
-            </form>
+            <h2>Contact</h2>
+            <div class="contact-info">
+                Email: <a href="mailto:hello@visualservices.info">hello@visualservices.info</a><br>
+                Phone: <a href="tel:13472097893">(347) 209-7893</a>
+            </div>
         </section>
 
         <footer>
             &copy; 2025 Visual Services. All Rights Reserved.
         </footer>
+
     </div>
 
 </body>
